bugfix: make subtasks look less broken on mobile

--- a/packages/app/styles/globals.less
+++ b/packages/app/styles/globals.less
@@ -698,10 +698,10 @@ textarea {
 }
 
 .dewo-table-xs {
-  margin-left: -8px;
+  margin-left: -2px;
 
   .ant-table.ant-table-small .ant-table-tbody > tr > td {
-    padding: 2px 8px;
+    padding: 2px 2px;
   }
 }
 
